--- a/index.html
+++ b/index.html
@@ -8,40 +8,110 @@
 
 <body>
 
-  <img src="Logo.jpg" alt="IT Support Company" width="1000px"; height="128px">
+  <img src="Logo.jpg" alt="IT Support Company" width="100%" height="100">
+  <link rel="stylesheet" href="css/style.css">
 
-  <h1>About Us</h1>
-  <p><strong>Established in 2011, Kwamena Information Technology & Projects (Pty) Ltd</strong> is a premier innovation solution company with commitment to serve the Private Sector, Government Agencies, Forensic Labs and Security companies in South Africa and Africa.</p>
-  <p>Specialising in Servers, Network Infrastructure and Security, Weapon Detection Systems, Forensic video retrieval, search, analysis and reporting for Law Enforcement and Security Operators.</p>
-  <p>Our vision in using cutting edge technology and importing latest equipment makes as a leader.</p>
-  <p>With Kwamena Information Technology & Projects (Pty) Ltd Growth Is Nothing Without a Change.</p>
+  <style>
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: #333;
+    }
+
+    li {
+      float: left;
+    }
+
+    li a {
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
+
+    li a:hover:not(.active) {
+      background-color: #111;
+    }
+
+    .active {
+      background-color: #04AA6D;
+    }
+  </style>
+  </head>
+
+  <body>
+
+    <ul>
+      <li><a href="#home">HOME</a></li>
+      <li><a href="#about">ABOUT US</a></li>
+      <li><a href="#services">SERVICES</a></li>
+      <li><a href="#products">PRODUCTS</a></li>
+      <li style="float:right"><a class="active" href="#contact">CONTACT DETAILS</a></li>
+    </ul>
+
+    <style>
+    .mySlides {display:none;}
+    </style>
+    </head>
+
+    <body>
+
+    <div class="w3-content w3-section" style="max-width:100%">
+      <img class="mySlides" src="slide image1.jpg" style="width:100%">
+      <img class="mySlides" src="slide image2.jpg" style="width:100%">
+      <img class="mySlides" src="slide image1.jpg" style="width:100%">
+    </div>
+
+    <script>
+    var myIndex = 0;
+    carousel();
+
+    function carousel() {
+      var i;
+      var x = document.getElementsByClassName("mySlides");
+      for (i = 0; i < x.length; i++) {
+        x[i].style.display = "none";
+      }
+      myIndex++;
+      if (myIndex > x.length) {myIndex = 1}
+      x[myIndex-1].style.display = "block";
+      setTimeout(carousel, 2000); // Change image every 2 seconds
+    }
+    </script>
 
 
-  <h3>What we offer</h3>
-<ul>
+    <p><strong>Established in 2011, Kwamena Information Technology & Projects (Pty) Ltd</strong> is a premier innovation solution company with commitment to serve the Private Sector, Government Agencies, Forensic Labs and Security companies in South Africa and Africa.</p>
+    <p>Specialising in Servers, Network Infrastructure and Security, Weapon Detection Systems, Forensic video retrieval, search, analysis and reporting for Law Enforcement and Security Operators.</p>
+    <p>Our vision in using cutting edge technology and importing latest equipment makes as a leader.</p>
+    <p>With Kwamena Information Technology & Projects (Pty) Ltd Growth Is Nothing Without a Change.</p>
 
-</p><em><li>What we offerServers and Desktop Computers</li></em></p>
-  <p><em><li>Network Intrusion Detection & Prevention Devices</li></em></p>
-  <p><em><li>VideScanner & Authentication Forensics</li></em></p>
-  <p><em><li>Data Recovery</li></em></p>
-  <p><em><li>Viewscan for Schools</li></em></p>
-  <p><em><li>TheLaw</li></em></p>
-  <p><em><li>Positive ID (Courthhouse Screening Device)</li></em></p>
-  <p><em><li>Documents & Book Scanning Solution</li></em></p>
+    <h3>What we offer</h3>
+
+    </p><em>Servers and Desktop Computers</p></em>
+    <p><em>Network Intrusion Detection & Prevention Devices</em></p>
+    <p><em>VideScanner & Authentication Forensics</em></p>
+    <p><em>Data Recovery</em></p>
+    <p><em>Viewscan for Schools</em></p>
+    <p><em>The Law</em></p>
+    <p><em>Positive ID (Courthhouse Screening Device)</em></p>
+    <p><em>Documents & Book Scanning Solution</em></p>
 
 
-  <h3>Contact Us/Newsletter Sign Up</h3>
+    <h3>Contact Us/Newsletter Sign Up</h3>
+    <form class="" action="index.html" method="post">
+      <label>Name</label>
+      <input type="text" name="" value=""><br>
+      <label>Email</label>
+      <input type="text" name="" value=""><br>
+      <label>YourMessage</label><br>
+      <textarea name="name" rows="8" cols="60"></textarea>
+      <input type="Submit" name="">
 
-  <form class="" action="index.html" method="post">
-    <label>Name</label>
-    <input type="text" name="" value=""><br>
-    <label>Email</label>
-    <input type="text" name="" value=""><br>
-    <label>YourMessage</label><br>
-    <textarea name="name" rows="8" cols="60"></textarea>
-    <input type="Submit" name="">
+    </form>
 
-  </form>
-</body>
+  </body>
 
 </html>
